Converted project to use Swift Package Manager and updated to Swift 5.3

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
-# Generated Files
-Generated/
-
 # Xcode
 #
+*.xcodeproj/
 build/
 *.pbxuser
 !default.pbxuser
@@ -18,6 +16,10 @@ xcuserdata
 DerivedData
 *.hmap
 *.ipa
+
+# Swift Package Manager
+.build
+Package.resolved
 
 # CocoaPods
 #
